--- a/contact.css
+++ b/contact.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: "Roboto" , sans-serif;
 }
 body{
   min-height: 100vh;
@@ -13,6 +13,49 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeee;
+  padding: 17px;
+  box-shadow: 0px 2px 2px 2px rgb(162, 162, 162);
+  font-family: 'Roboto', sans-serif;
+}
+nav .logo{
+  margin-left: 22px;
+  font-size: 24px;
+}
+nav .logo a{
+  text-decoration: none;
+  color: black;
+} 
+ul{
+  margin-right: 45px;
+  margin-top: 7px;
+}
+nav ul li{
+  list-style: none;
+}
+ul li a{
+  margin-inline: 22px;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+ul li i{
+  font-size: 22px;
+}
+ul li #contact{
+  color: rgb(5, 167, 167);
+}
+ul li a:hover{
+  border-bottom: 2px solid black;
+  cursor: pointer;
+}
+ul li i:hover{
+  color: gray;
+  cursor: pointer;
 }
 .container{
   width: 85%;
