--- a/shopping.css
+++ b/shopping.css
@@ -3,12 +3,14 @@ body{
     margin: 0;
     padding: 0;     
 }
+
 nav{
   display: flex;
   justify-content: space-between;
   background-color: #eeee;
   padding: 17px;
   box-shadow: 0px 2px 2px 2px rgb(162, 162, 162);
+  font-family: 'Roboto', sans-serif;
 }
 nav .logo{
   margin-left: 22px;
@@ -34,7 +36,7 @@ ul li a{
 ul li i{
   font-size: 22px;
 }
-ul li #women{
+ul li #blog{
   color: rgb(5, 167, 167);
 }
 ul li a:hover{
@@ -45,11 +47,6 @@ ul li i:hover{
   color: gray;
   cursor: pointer;
 }
-
-.navbar{
-  font-family: 'Montserrat Alternates', sans-serif;
-}
-
 #category{
   padding: 5% 6%;
 }
